force-app/main/default/objects/ProcessData__c/ProcessData__c.object-meta.xml
<CustomObject>
    <description>Object to store the Inbound and Outbound Data</description>
    <label>Process Data</label>
    <nameField>
        <displayFormat>PD-{000000000}</displayFormat>
        <label>ProcessData</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>