force-app/main/default/objects/ProcessData__c/fields/DataDirection__c.field-meta.xml
<CustomField>
    <fullName>DataDirection__c</fullName>
    <description>Indicated The Direction of the Data</description>
    <inlineHelpText>The Direction of the Data</inlineHelpText>
    <label>Data Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>