force-app/main/default/objects/ProcessData__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <description>Indicates the Type of Process Data</description>
    <inlineHelpText>Type of Process Data</inlineHelpText>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>frends</fullName>
            </value>
            <value>
                <fullName>plantori</fullName>
            </value>
            <value>
                <fullName>visual</fullName>
            </value>
            <value>
                <fullName>sovelia</fullName>
            </value>
            <value>
                <fullName>mepco</fullName>
            </value>
            <value>
                <fullName>OrderMessage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>